--- a/pony/G4/S2.md
+++ b/pony/G4/S2.md
@@ -1,6 +1,6 @@
 ---
 title: Twilight's Library Season 2
-layout: backpony
+layout: backponytest
 filename: ponyG4S2
 --- 
 # 回到上一季
@@ -14,6 +14,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/c/cc/TwilightRarity_WheresMyHorn_S02E01.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_16.html)
+Password:4093    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/Q1hOaVlmLTQ2Njk3MzYuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E02 
 ## The Return of Harmony, part 2
@@ -23,6 +25,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/c/c3/The_ponies_pull_Rainbow_Dash_down_S2E02.gif/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_20.html)
+Password:3046    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/UkMybWNTLTQ2OTIyMTguZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E03
 ## Lesson Zero
@@ -32,6 +36,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/6/69/Clock_is_ticking_S02E03.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_25.html)
+Password:0000    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/RnBmVmthLTQ3MTc0NTYuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E04
 ## Luna Eclipsed
@@ -41,6 +47,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/7/70/Rainbow_Dash_gets_startled_S2E04.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic_27.html)
+Password:0993   
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/SHJVM05oLTQ3MjczMTEuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E05
 ## Sisterhooves Social
@@ -50,7 +58,9 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/c/c9/Apple_Bloom_Sweetie_Belle_fighting_over_Applejack_S2E05.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/04/my-little-pony-friendship-is-magic.html)
- 
+Password:0754   
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/aTlVbzl0LTQ3NDExNDIuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+
 # S2E06
 ## The Cutie Pox
 ![](https://static.wikia.nocookie.net/mlp/images/e/e5/Scootaloo_Bowling_2_S2E6.png/revision/latest)
@@ -59,7 +69,9 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/b/b3/Applejack_being_shaken_by_Apple_Bloom_S2E06.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_4.html)
- 
+Password:6972    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/aTlVbzl0LTQ3NDExNDIuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+
 # S2E07
 ## May the Best Pet Wins!
 ![](https://static.wikia.nocookie.net/mlp/images/0/0c/Rainbow_Dash_Scream_2_S2E7.png/revision/latest)
@@ -68,6 +80,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/5/5f/Rainbow_Dash_providing_some_extra_lift_S2E07.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_11.html)
+Password:7128    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/cmg3d2hYLTQ4MTQzNzMuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E08
 ## The Mysterious Mare Do Well
@@ -77,6 +91,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/6/6d/Rainbow_Dash_ahhhhhhh_S2E8.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic_18.html)
+Password:7120    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/TXBBVjRCLTQ4NTczNTguZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E09
 ## Sweet and Elite
@@ -86,6 +102,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/1/1e/Rainbow_Dash_Ponyville_style_S2E9.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic.html)
+Password:7624    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/UzNyRHhuLTQ4OTgyMDQuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E10
 ## Secret of My Excess
@@ -95,6 +113,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/1/17/Twilight_Sparkle_Applejack_tied_tree_S2E10.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/05/my-little-pony-friendship-is-magic.html)
+Password:9236   
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/a0xCMTlnLTQ5NTE0NTQuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E11
 ## Hearth's Warming Eve
@@ -104,6 +124,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/1/15/Rarity_riding_Twilight_S2E11.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_8.html)
+Password:0478    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/TXdaOHdELTQ5ODc3NjkuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E12
 ## Family Appreciation Day
@@ -113,6 +135,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/f/f4/ElectrifiedSweetieBelle_S02E12.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_13.html)
+Password:7238    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/d21Md25YLTUwMTQ4MDMuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E13
 ## Baby Cakes
@@ -122,6 +146,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/9/93/Pinkie_Pie_about_to_cry_S2E13.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_15.html)
+Password:9382    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/ZGJSZ1dNLTUwMjIxMjguZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E14
 ## The Last Roundup
@@ -133,6 +159,8 @@ filename: ponyG4S2
 ### "*Nopony breaks a Pinkie PROMISE!*"
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_20.html)
+Password:0472    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/Q0ljc2hYLTUwNDE5MzguZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E15
 ## The Super Speed Cider Squeezy 6000
@@ -142,6 +170,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/3/31/Rainbow_Dash_cruel_joke_S2E15.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_22.html)
+Password:6000    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/N1NJY3JELTUwNTE5MTIuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E16
 ## Read It and Weep
@@ -151,6 +181,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/2/27/Rainbow_turns_on_lamp_S2E16.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic_27.html)
+Password:9378    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/cGkzWmNULTUwNzY4MTQuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E17
 ## Hearts and Hooves Day
@@ -160,6 +192,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/2/29/CMC_Ingredients_03_S02E17.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/06/my-little-pony-friendship-is-magic.html)
+Password:5684   
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/SEg3Um03LTUwODU3MjAuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E18
 ## A Friend in Deed
@@ -169,6 +203,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/b/bb/Pinkie_Looking_Acorable_S02E18.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_6.html)
+Password:6168    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/OWJleks1LTUxMTY0ODcuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E19
 ## Putting Your Hoof Down
@@ -176,8 +212,11 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/2/21/Fluttershy_blocking_water_S2E19.png/revision/latest)
 ![](https://static.wikia.nocookie.net/mlp/images/6/62/Frowning_Fluttershy_S2E19.png/revision/latest)
 ![](https://static.wikia.nocookie.net/mlp/images/d/d0/Flutterroar_S2E19.png/revision/latest)<br>
+強烈建議觀看後至好色龍網站參考註釋<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_13.html)
+Password:4563    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/Q0MycmhTLTUxNDk0NzMuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
  
 # S2E20 
 ## It's About time
@@ -187,6 +226,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/9/9c/Twilight_with_flowerpot_on_her_head_S2E20.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic_20.html)
+Password:7834   
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/WU1USmVCLTUxOTE5ODMuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E21 
 ## Dragon quest
@@ -196,6 +237,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/d/d2/Phoenix_sunburst_2_S2E21.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/07/my-little-pony-friendship-is-magic.html)
+Password:7675    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/aWdWcXRSLTUyMjI2MzMuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E22 
 ## Hurricane Fluttershy
@@ -205,6 +248,8 @@ filename: ponyG4S2
 ![](https://static.wikia.nocookie.net/mlp/images/a/ae/Fluttershy_crying_S2E22.gif/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_3.html)
+Password:8000
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/NWF6azVRLTUyNTE1ODcuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E23 
 ## Ponyville Confidential
@@ -215,6 +260,8 @@ filename: ponyG4S2
 I'll *destroy* her!
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_10.html)
+Password:7568    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/R3FCV0xvLTUyODQ1MzQuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 
 
@@ -226,6 +273,8 @@ I'll *destroy* her!
 ![](https://static.wikia.nocookie.net/mlp/images/c/cf/Pinkie_Pie_gassed_2_S2E24.png/revision/latest)<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic_17.html)
+Password:3427    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/VHZHYjhnLTUzMjExMjYuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # **ＷＯＲＫ ＩＮ ＰＲＯＧＲＥＳＳ**
 我目前就看到這裡 等會再來
@@ -238,6 +287,8 @@ I'll *destroy* her!
 ![]()<br>
 ## 進入小馬國
 [點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)
+Password:2203    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/andwTkZJLTUzNjIwNTIuZmx2?ar=0&as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 
 # S2E26
 ## A Canterlot Wedding - Part 2
@@ -246,7 +297,8 @@ I'll *destroy* her!
 ![]()
 ![]()<br>
 ## 進入小馬國
-[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)    
-
+[點擊此處](https://hdx3.blogspot.com/2012/08/my-little-pony-friendship-is-magic.html)<br>
+Password:2203    
+<iframe allowfullscreen="true" frameborder="0" height="468" marginheight="0" marginwidth="0" scrolling="no" src="https://vlog.xuite.net/embed/WFhueERzLTUzNjIwNTMuZmx2?ar=0as=0" width="640" referrerpolicy="no-referrer-when-downgrade" ></iframe>
 # 前往下一季
 [點擊此處](https://linbei9487.github.io/pony/G4/S3)    
